add twitter card

--- a/music.html
+++ b/music.html
@@ -6,6 +6,12 @@
     <title>MetaMuse - Music</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@MetaMuse_Idol">
+    <meta name="twitter:title" content="MetaMuse Official Site">
+    <meta name="twitter:description" content="Welcome to the official site of MetaMuse, your favorite virtual idol group!">
+    <meta name="twitter:image" content="https://metamuse-virtualidol.github.io/Official/assets/img/MetaMuse_idol_icon.JPG">
     <link rel="icon" href="./assets/img/MetaMuse_idol_icon.JPG">
     <link rel="stylesheet" href="./assets/css/music.css">
 </head>
