--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@MetaMuse_Idol">
+    <meta name="twitter:title" content="MetaMuse Official Site">
+    <meta name="twitter:description" content="Welcome to the official site of MetaMuse, your favorite virtual idol group!">
+    <meta name="twitter:image" content="https://metamuse-virtualidol.github.io/Official/assets/img/MetaMuse_idol_icon.JPG">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/img/MetaMuse_idol_icon.JPG">
 </head>
