add google analytics

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta name="twitter:title" content="MetaMuse Official Site">
     <meta name="twitter:description" content="Welcome to the official site of MetaMuse, your favorite virtual idol group!">
     <meta name="twitter:image" content="https://metamuse-virtualidol.github.io/Official/assets/img/MetaMuse_idol_icon.JPG">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-159BPK4YN1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-159BPK4YN1');
+    </script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/img/MetaMuse_idol_icon.JPG">
 </head>
