new single and add visited counter

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <p>未来のメタバースアイドル、MetaMuseの公式サイトへようこそ！</p>
     </div>
 
+    <!-- 訪問数カウンター -->
+    <div class="counter" id="visitCounter">Visits: 0</div>
+
     <!-- コンテンツ -->
     <div class="container mt-5">
         <section id="about">
@@ -323,6 +326,11 @@
                 <div class="gallery-item">
                     <a href="./music.html#album7">
                         <img src="./assets/img/始発電車.png" alt="ギャラリー7">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album8">
+                        <img src="./assets/img/夜行列車.png" alt="ギャラリー7">
                     </a>
                 </div>
                 
