--- a/music.html
+++ b/music.html
@@ -147,6 +147,36 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/夜行列車.png" class="card-img-top" alt="アルバム8" id="album8">
+                    <div class="card-body">
+                        <h5 class="card-title">夜行列車</h5>
+                        <p class="card-text">
+                            「夜行列車」は、静かな夜の街を抜け、星の光に導かれる旅路を描いたエモーショナルな楽曲です。夜行列車に乗り込み、未知の世界へと旅立つ姿が、心に響くメロディと共に紡がれています。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/夜行列車.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/改札出口.png" class="card-img-top" alt="アルバム9" id="album9">
+                    <div class="card-body">
+                        <h5 class="card-title">改札出口</h5>
+                        <p class="card-text">
+                            この楽曲は、忙しい一日の終わりに改札を抜ける瞬間をテーマに、今日の思い出や明日への期待をエモーショナルに描いています。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/改札出口.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
