--- a/news.html
+++ b/news.html
@@ -182,12 +182,12 @@
             <div class="card news-item">
                 <div class="card-header" id="headingEight">
                     <h2 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
                             #8 セカンドアルバム2曲目「始発電車」は、新しい日常の始まりを描いたエネルギッシュな楽曲です。
                         </button>
                     </h2>
                 </div>
-                <div id="collapseEight" class="collapse show" aria-labelledby="headingEight" data-parent="#allNewsAccordion">
+                <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#allNewsAccordion">
                     <div class="card-body">
                         <p>
                             この楽曲は、朝の光が目覚める瞬間を描き、憂鬱な気分を吹き飛ばすエネルギッシュなメロディが特徴です。
@@ -196,6 +196,45 @@
                         </p>
                         <button class="btn btn-light"><a href="./music.html#album7" id="playMusic">音楽を再生する</a></button>
                         <button class="btn btn-light"><a href="https://suno.com/song/217b247e-e949-4817-bec6-657029423b0e" target="_blank" id="playMusic">Sunoで聞く</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card news-item">
+                <div class="card-header" id="headingNine">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                            #9 セカンドアルバム3曲目「夜行列車」リリース決定！
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#allNewsAccordion">
+                    <div class="card-body">
+                        <p>
+                            MetaMuseが新たにリリースするシングル「夜行列車」は、静かな夜の街を抜け、星の光に導かれる旅路を描いたエモーショナルな楽曲です。夜行列車に乗り込み、未知の世界へと旅立つ姿が、心に響くメロディと共に紡がれています。
+                            この曲は、夜の静寂の中で夢と希望を探し求めるテーマが込められており、新たな出会いや未来への期待が表現されています。窓の外に広がる風景や、夜空に浮かぶ星々を背景に、旅の途中で感じる心の高鳴りと共に、リスナーを未知の世界へと誘います。
+                            「夜行列車」は、MetaMuseの公式ウェブサイトおよび主要な音楽配信プラットフォームで全世界同時に配信されます。最新情報やリリースに関する詳細は公式ウェブサイトやSNSを通じてご確認ください。                       
+                        </p>
+                        <button class="btn btn-light"><a href="./music.html#album8" id="playMusic">音楽を再生する</a></button>
+                        <button class="btn btn-light"><a href="https://suno.com/song/8345cb7d-fb95-4667-b799-8d0e53bdff7f" target="_blank" id="playMusic">Sunoで聞く</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card news-item">
+                <div class="card-header" id="headingTen">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
+                            #10 セカンドアルバム4曲目「改札出口」リリース決定！
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseTen" class="collapse show" aria-labelledby="headingTen" data-parent="#allNewsAccordion">
+                    <div class="card-body">
+                        <p>
+                            「改札出口」は、街の灯りが少しずつ消えていく夕暮れの中、改札を抜けることで一日の終わりを感じるシーンを歌い上げます。夜風が頬を撫でるたびに感じる一日の疲れと、心の中に浮かぶ温かい思い出。小さな幸せを見つけながら、明日へと続く道を歩き出すリスナーに寄り添う楽曲です。
+                            MetaMuseの音楽が、日々の忙しさに追われる皆さんに、少しの安らぎと明日への希望を届けます。改札出口で立ち止まり、今日の終わりにありがとうを感じながら、明日への一歩を踏み出す瞬間を一緒に味わいましょう。                        
+                        </p>
+                        <button class="btn btn-light"><a href="./music.html#album9" id="playMusic">音楽を再生する</a></button>
+                        <button class="btn btn-light"><a href="https://suno.com/song/2a38d114-7fc3-415c-9598-b6f3cd1af15e" target="_blank" id="playMusic">Sunoで聞く</a></button>
                     </div>
                 </div>
             </div>
