--- a/index.html
+++ b/index.html
@@ -330,7 +330,17 @@
                 </div>
                 <div class="gallery-item">
                     <a href="./music.html#album8">
-                        <img src="./assets/img/夜行列車.png" alt="ギャラリー7">
+                        <img src="./assets/img/夜行列車.png" alt="ギャラリー8">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album9">
+                        <img src="./assets/img/改札出口.png" alt="ギャラリー9">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album10">
+                        <img src="./assets/img/快速電車.png" alt="ギャラリー10">
                     </a>
                 </div>
                 
