--- a/music.html
+++ b/music.html
@@ -177,6 +177,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/快速電車.png" class="card-img-top" alt="アルバム10" id="album10">
+                    <div class="card-body">
+                        <h5 class="card-title">快速電車</h5>
+                        <p class="card-text">
+                            「快速電車」は、人生の旅路を快速電車に例えたエネルギッシュな楽曲です。時間が待ってくれない中、未来へと進む姿を描いたこの曲は、希望と不安を乗せて進む電車のように、リスナーに勇気と元気を届けます。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/快速電車.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
