--- a/news.html
+++ b/news.html
@@ -222,12 +222,12 @@
             <div class="card news-item">
                 <div class="card-header" id="headingTen">
                     <h2 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
                             #10 セカンドアルバム4曲目「改札出口」リリース決定！
                         </button>
                     </h2>
                 </div>
-                <div id="collapseTen" class="collapse show" aria-labelledby="headingTen" data-parent="#allNewsAccordion">
+                <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#allNewsAccordion">
                     <div class="card-body">
                         <p>
                             「改札出口」は、街の灯りが少しずつ消えていく夕暮れの中、改札を抜けることで一日の終わりを感じるシーンを歌い上げます。夜風が頬を撫でるたびに感じる一日の疲れと、心の中に浮かぶ温かい思い出。小さな幸せを見つけながら、明日へと続く道を歩き出すリスナーに寄り添う楽曲です。
@@ -235,6 +235,24 @@
                         </p>
                         <button class="btn btn-light"><a href="./music.html#album9" id="playMusic">音楽を再生する</a></button>
                         <button class="btn btn-light"><a href="https://suno.com/song/2a38d114-7fc3-415c-9598-b6f3cd1af15e" target="_blank" id="playMusic">Sunoで聞く</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card news-item">
+                <div class="card-header" id="headingEleven">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
+                            #11 セカンドアルバム5曲目「快速電車」リリース決定！
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseEleven" class="collapse show" aria-labelledby="headingTen" data-parent="#allNewsAccordion">
+                    <div class="card-body">
+                        <p>
+                            「快速電車」は、遠くに見える山々や街並みを背景に、仲間たちと共に笑い合いながら進む道のりを歌っています。
+                            高層ビルの影に未来が見える瞬間、夢見る瞳に映る輝きなど、人生の一瞬一瞬が描かれています。急がず焦らず、自分のペースで進むことの大切さをメッセージとして込めました。                        </p>
+                        <button class="btn btn-light"><a href="./music.html#album10" id="playMusic">音楽を再生する</a></button>
+                        <button class="btn btn-light"><a href="https://suno.com/song/3034b5e0-4a24-45df-a67b-cab8e7f1e186" target="_blank" id="playMusic">Sunoで聞く</a></button>
                     </div>
                 </div>
             </div>
