add tiktok link

--- a/index.html
+++ b/index.html
@@ -371,9 +371,10 @@
             <!-- <p>Follow us</p> -->
             <!-- SNSセクション -->
             <div class="sns-section">
-                <a href="https://x.com/MetaMuse_Idol" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://x.com/MetaMuse_idol" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.youtube.com/@MetaMuse_Idol" target="_blank"><i class="fab fa-youtube"></i></a>
                 <a href="https://www.instagram.com/MetaMuse_idol" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@metamuse_virtualidol" target="_blank"><i class="fab fa-tiktok"></i></a>
             </div>
         </section>
 
