Automatically move to the latest news

--- a/news.html
+++ b/news.html
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card news-item">
+            <div class="card news-item" id="latest-news">
                 <div class="card-header" id="headingEleven">
                     <h2 class="mb-0">
                         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
