add third album

--- a/index.html
+++ b/index.html
@@ -340,7 +340,31 @@
                         <img src="./assets/img/快速電車.png" alt="ギャラリー10">
                     </a>
                 </div>
-                
+                <div class="gallery-item">
+                    <a href="./music.html#album11">
+                        <img src="./assets/img/四季のシンフォニー.jpeg" alt="ギャラリー11">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album12">
+                        <img src="./assets/img/春のはじまり.jpeg" alt="ギャラリー12">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album13">
+                        <img src="./assets/img/夏のリズム.jpeg" alt="ギャラリー13">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album14">
+                        <img src="./assets/img/秋のメモリー.jpeg" alt="ギャラリー14">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="./music.html#album15">
+                        <img src="./assets/img/雪の降る街で.jpeg" alt="ギャラリー15">
+                    </a>
+                </div>
                 <!-- 他の画像も同様に追加 -->
         </section>
 
