--- a/music.html
+++ b/music.html
@@ -192,6 +192,81 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/四季のシンフォニー.jpeg" class="card-img-top" alt="アルバム11" id="album11">
+                    <div class="card-body">
+                        <h5 class="card-title">四季のシンフォニー</h5>
+                        <p class="card-text">
+                            このアルバムは、春夏秋冬それぞれの魅力を歌った楽曲で構成されており、MetaMuseの新たな可能性を存分に感じられる作品となっています。                        
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/四季のシンフォニー.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/春のはじまり.jpeg" class="card-img-top" alt="アルバム12" id="album12">
+                    <div class="card-body">
+                        <h5 class="card-title">春のはじまり</h5>
+                        <p class="card-text">
+                            「春のはじまり」は、アルバム「四季のシンフォニー」の2曲目として収録される楽曲です。春の訪れを告げるような爽やかなメロディーと、希望に満ちた歌詞が特徴です。MetaMuseのメンバーたちの歌声が、春の訪れを鮮やかに彩ります。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/春のはじまり.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/夏のリズム.jpeg" class="card-img-top" alt="アルバム13" id="album13">
+                    <div class="card-body">
+                        <h5 class="card-title">夏のリズム</h5>
+                        <p class="card-text">
+                            夏らしい情熱的な楽曲です。疾走感のあるメロディーと力強いボーカルで、聴く人を夏の太陽のように熱く盛り上げてくれます。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/夏のリズム.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/秋のメモリー.jpeg" class="card-img-top" alt="アルバム14" id="album14">
+                    <div class="card-body">
+                        <h5 class="card-title">秋のメモリー</h5>
+                        <p class="card-text">
+                            切ないメロディと歌詞で、秋色に染まる街のセンチメンタルを表現！
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/秋のメモリー.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card music-card">
+                    <img src="./assets/img/雪の降る街で.jpeg" class="card-img-top" alt="アルバム15" id="album15">
+                    <div class="card-body">
+                        <h5 class="card-title">雪の降る街で</h5>
+                        <p class="card-text">
+                            澄んだ歌声と美しいメロディーが織りなす、心温まる冬のバラードです。大切な人との思い出を振り返り、未来への希望を歌った歌詞は、冬の夜に聴きたい一曲です。
+                        </p>
+                        <audio controls>
+                            <source src="./assets/music/雪の降る街で.mp3" type="audio/mp3">
+                            お使いのブラウザはオーディオタグをサポートしていません。
+                        </audio>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
