--- a/news.html
+++ b/news.html
@@ -238,21 +238,40 @@
                     </div>
                 </div>
             </div>
-            <div class="card news-item" id="latest-news">
+            <div class="card news-item">
                 <div class="card-header" id="headingEleven">
                     <h2 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
                             #11 セカンドアルバム5曲目「快速電車」リリース決定！
                         </button>
                     </h2>
                 </div>
-                <div id="collapseEleven" class="collapse show" aria-labelledby="headingTen" data-parent="#allNewsAccordion">
+                <div id="collapseEleven" class="collapse" aria-labelledby="headingEleven" data-parent="#allNewsAccordion">
                     <div class="card-body">
                         <p>
                             「快速電車」は、遠くに見える山々や街並みを背景に、仲間たちと共に笑い合いながら進む道のりを歌っています。
                             高層ビルの影に未来が見える瞬間、夢見る瞳に映る輝きなど、人生の一瞬一瞬が描かれています。急がず焦らず、自分のペースで進むことの大切さをメッセージとして込めました。                        </p>
                         <button class="btn btn-light"><a href="./music.html#album10" id="playMusic">音楽を再生する</a></button>
                         <button class="btn btn-light"><a href="https://suno.com/song/3034b5e0-4a24-45df-a67b-cab8e7f1e186" target="_blank" id="playMusic">Sunoで聞く</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="card news-item" id="latest-news">
+                <div class="card-header" id="headingTwelve">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="true" aria-controls="collapseTwelve">
+                            #12 待望のサードアルバム「四季のシンフォニー」をリリースしました！
+                        </button>
+                    </h2>
+                </div>
+                <div id="collapseTwelve" class="collapse show" aria-labelledby="headingTwelve" data-parent="#allNewsAccordion">
+                    <div class="card-body">
+                        <p>
+                            「四季のシンフォニー」は、MetaMuseのこれまでの活動を総括するとともに、新たな挑戦を表現したアルバムです。
+                            春夏秋冬それぞれの魅力を歌った楽曲で構成されており、MetaMuseの新たな可能性を存分に感じられる作品となっています。
+                        </p>
+                        <button class="btn btn-light"><a href="./music.html#album11" id="playMusic">音楽を再生する</a></button>
+                        <button class="btn btn-light"><a href="https://suno.com/song/d5840b6c-605b-440e-aa0c-1aa89d6cf45a" target="_blank" id="playMusic">Sunoで聞く</a></button>
                     </div>
                 </div>
             </div>
